--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "requirejs": "~2.1.20",
-    "requirejs-babel": "~0.0.8"
+    "requirejs-babel": "~0.0.8",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "qunit": "~1.19.0"
