--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "requirejs": "~2.1.20",
-    "requirejs-babel": "~0.0.8",
-    "underscore": "~1.8.3"
+    "requirejs-babel": "~0.0.8"
   },
   "devDependencies": {
     "qunit": "~1.19.0",
