--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "main": "gruntfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "main": "dist/index.js",
+  "author": "valaxy",
+  "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.3",
     "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^3.3.0"
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
   }
 }
