--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
+  "name": "parser",
+  "version": "0.1.0-dev",
   "main": "dist/index.js",
   "author": "valaxy",
   "license": "MIT",
   "devDependencies": {
+    "cjs": "github:valaxy/cjs",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.3",
     "grunt-contrib-watch": "^0.6.1",
-    "load-grunt-tasks": "^3.3.0"
+    "load-grunt-tasks": "^3.3.0",
+    "qunitjs": "^1.20.0",
+    "requirejs": "^2.1.22"
   },
   "dependencies": {
     "underscore": "^1.8.3"
