--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "requirejs": "^2.1.22"
   },
   "dependencies": {
+    "algorithm-data-structure": "github:valaxy/algorithm-data-structure",
     "underscore": "^1.8.3"
   }
 }
